<resources>
    <string name="app_name">FirstApplication</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_text">App created by Arnas Kromelis</string>
    <string name="about_text2">MOBI1-Y-A15</string>
    <string name="about_text3">This applications was created for learning purposes while studying in
        VIA University College, Mobile applications 1 course. It has basic functionality.
        You can use it to send emails, or browse in the internet. To make it more customizable there is
        an option to change the color of buttons and it will be saved in preferences. That means the
    next time you will open this app the colors will be as the last time you left them. If you are
    still reading this, that means I have no idea what to write more so that there would be more
    text here. Have a nice day!</string>
    <string name="title_activity_options">OptionsActivity</string>

    <string name="options_color_prompt">Choose a main color:</string>

    <string-array name="options_colors">
        <item>Blue</item>
        <item>Orange</item>
        <item>Green</item>
        <item>Red</item>
    </string-array>
    <string name="title_activity_browser">iBrowser</string>
    <string name="title_activity_mail">iMail</string>
    <string name="browser_back_button">Back</string>
    <string name="history_back"><![CDATA[<]]></string>
    <string name="history_forward"><![CDATA[>]]></string>
    <string name="button_Reload">↺</string>
    <string name="button_stopLoading">X</string>
    <string name="go_back_text"><![CDATA[<< Go back to main menu]]></string>
    <string name="go_Back_mail">Go back</string>
    <string name="send_Button">Send</string>
    <string name="hint_email">Enter email</string>
    <string name="hint_subject">Enter subject</string>
    <string name="hint_message">Enter message</string>
    <string name="choose_color">Choose main color:</string>
    <string name="btn_mail">Mail</string>
    <string name="btn_browser">Browser</string>
    <string name="btn_options">Options</string>
    <string name="btn_about">About</string>
    <string name="btn_quit">Quit</string>
    <string name="choose_mailing_option">Use our mail client:</string>

</resources>
