<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ark.viauc.mobi.firstapp.MailActivity"
    android:background="@drawable/portrait">

    <TextView android:text="@string/title_activity_mail" android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <Button
        android:layout_width="match_parent"
        android:layout_gravity="start"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/go_Back_mail"
        android:layout_weight="0.4"
        android:id="@+id/back_button"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/send_Button"
            android:id="@+id/send_button"
            android:layout_weight="0.4"
            android:layout_gravity="end"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp" />

    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_marginTop="22dp"
        android:background="#34495e"
        android:allowUndo="true"
        android:padding="10dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_email"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText3"
        android:layout_alignEnd="@+id/editText3"
        android:inputType="textEmailSubject"
        android:background="#34495e"
        android:allowUndo="true"
        android:padding="10dp"
        android:hint="@string/hint_subject"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignEnd="@+id/editText2"
        android:allowUndo="true"
        android:inputType="textMultiLine"
        android:textColor="#fff"
        android:background="#34495e"
        android:gravity="top"
        android:padding="10dp"
        android:hint="@string/hint_message"/>

</RelativeLayout>
